[package]
name        = "snap7-sys"
version     = "0.1.1"
authors     = ["hal-rs initiative"]
license     = "MIT"
description = "Bindings to snap7 library"
repository  = "https://github.com/hal-rs/snap7"
categories  = ["hardware-support"]
keywords    = ["HAL", "PLC", "S7"]

build       = "build.rs"

[build-dependencies]
bindgen = "0.49.2"

[dependencies]
libc = "0.2"

#[[example]]
#name = "simple"
